--- a/net-ef-training/net-ef-training.csproj
+++ b/net-ef-training/net-ef-training.csproj
@@ -109,6 +109,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\hi.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Auth\ApiAuthorizeAttribute.cs" />
