--- a/net-ef-training/net-ef-training.csproj
+++ b/net-ef-training/net-ef-training.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
     </Reference>
@@ -115,11 +117,26 @@
     <Compile Include="Auth\ApiAuthorizeAttribute.cs" />
     <Compile Include="Auth\LoginRequest.cs" />
     <Compile Include="Auth\LoginResult.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="DataBase\TrainContext.cs" />
     <Compile Include="DataBase\TrainDbInitializer.cs" />
+    <Compile Include="Extensions\CommonEnum.cs" />
+    <Compile Include="Extensions\JwtClaimTypes.cs" />
+    <Compile Include="Extensions\ResponseModel.cs" />
+    <Compile Include="Extensions\ResponseModelFactory.cs" />
+    <Compile Include="Extensions\ResponseResultModel.cs" />
+    <Compile Include="Extensions\UserStatus.cs" />
+    <Compile Include="Extensions\UserType.cs" />
+    <Compile Include="Models\Erp\DncIcon.cs" />
+    <Compile Include="Models\Erp\DncMenu.cs" />
+    <Compile Include="Models\Erp\DncPermission.cs" />
+    <Compile Include="Models\Erp\DncRole.cs" />
+    <Compile Include="Models\Erp\DncRolePermissionMapping.cs" />
+    <Compile Include="Models\Erp\DncUser.cs" />
+    <Compile Include="Models\Erp\DncUserRoleMapping.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -128,12 +145,15 @@
       <DependentUpon>201906060934131_InitWebApiDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ErpDbContext.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\SysUser.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Erp\TjCustomer.cs" />
+    <Compile Include="Models\Erp\TjSku.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Blog.cs" />
@@ -158,6 +178,9 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
@@ -169,7 +192,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>12491</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:12491/</IISUrl>
+          <IISUrl>http://localhost:54321/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
